--- a/css/style.css
+++ b/css/style.css
@@ -863,35 +863,35 @@ cursor:pointer !important;
 
 @font-face {
     font-family: "Annie Use Your Telescope";
-    src: url(fonts/AnnieUseYourTelescope.ttf);
+    src: url(../fonts/AnnieUseYourTelescope.ttf);
 }
 @font-face {
     font-family: "Redressed";
-    src: url(fonts/Redressed.ttf);
+    src: url(../fonts/Redressed.ttf);
 }
 @font-face {
     font-family: "Pacifico";
-    src: url(fonts/Pacifico.ttf);
+    src: url(../fonts/Pacifico.ttf);
 }
 @font-face {
     font-family: "Ubuntu";
-    src: url(fonts/Ubuntu-Regular.ttf);
+    src: url(../fonts/Ubuntu-Regular.ttf);
 }
 @font-face {
     font-family: "UbuntuLI";
-    src: url(fonts/Ubuntu-LightItalic.ttf);
+    src: url(../fonts/Ubuntu-LightItalic.ttf);
 }
 @font-face {
     font-family: "Cherry Cream Soda";
-    src: url(fonts/CherryCreamSoda.ttf);
+    src: url(../fonts/CherryCreamSoda.ttf);
 }
 @font-face {
     font-family: "Dancing Script";
-    src: url(fonts/DancingScript-Regular.ttf);
+    src: url(../fonts/DancingScript-Regular.ttf);
 }
 @font-face {
     font-family: "LuckiestGuy";
-    src: url(fonts/LuckiestGuy.ttf);
+    src: url(../fonts/LuckiestGuy.ttf);
 }
 
 
